# TCCC.ai

./: .gitattributes  .gitignore  .last_session  .pre-commit-config.yaml  .session_state.json  AGENT1_IMPLEMENTATION_NOTES.md  AGENT2_IMPLEMENTATION_NOTES.md  AGENT3_IMPLEMENTATION_NOTES.md  AGENT3_TASK.md  AGENT_STATUS.md  AUDIO_STT_BENCHMARKS.md  AUDIO_STT_FIXES.md  AUDIO_STT_INTEGRATION_COMPLETE.md  AUDIO_STT_MANAGER_REPORT.md  BATTLEFIELD_AUDIO_IMPROVEMENTS.md  CLAUDE.md  CONTRIBUTING.md.new  DISPLAY_EVENT_INTEGRATION.md  DISPLAY_IMPLEMENTATION_SUMMARY.md  DISPLAY_OPTIMIZATION_PLAN.md  DISPLAY_SETUP_GUIDE.md  DOCUMENT_LIBRARY_IMPLEMENTATION.md  FULLSUBNET_INTEGRATION_COMPLETE.md  FULLSUBNET_USAGE_GUIDE.md  IMPLEMENTATION_STATUS.md  LICENSE  LLM_ANALYSIS_IMPLEMENTATION.md  META_PROMPT_MULTI_AGENT.md  MVP_VERIFICATION.md  NEXT_STEPS.md  PHI2_GGUF_INTEGRATION_COMPLETE.md  PROJECT_STATUS.md  RAG_EXPLORER_HELP.md  RAG_TOOL_USAGE.md  README.md  README.md.new  README_MICROPHONE.md  STT_ENGINE_IMPLEMENTATION.md  STT_MODULE_NEXT_STEPS.md  SUMMARY.md  (+195 more)
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
archive_multi_agent/: AGENT1_IMPLEMENTATION_NOTES.md  AGENT1_STT_SUMMARY.md  AGENT1_TASK.md  AGENT2_IMPLEMENTATION_NOTES.md  AGENT2_TASK.md  AGENT3_TASK.md
audio_diagnostics/: audio_segment_100.npy  audio_segment_120.npy  audio_segment_140.npy  audio_segment_160.npy  audio_segment_180.npy  audio_segment_20.npy  audio_segment_200.npy  audio_segment_220.npy  audio_segment_260.npy  audio_segment_280.npy  audio_segment_300.npy  audio_segment_320.npy  audio_segment_340.npy  audio_segment_360.npy  audio_segment_380.npy  audio_segment_40.npy  audio_segment_400.npy  audio_segment_440.npy  audio_segment_460.npy  audio_segment_60.npy  audio_segment_80.npy
audio_samples/: raw_audio_120.npy  raw_audio_150.npy  raw_audio_210.npy  raw_audio_240.npy  raw_audio_270.npy  raw_audio_30.npy  raw_audio_330.npy  raw_audio_390.npy  raw_audio_420.npy  raw_audio_450.npy  raw_audio_60.npy  raw_audio_90.npy
audio_showcase_output/: transcription.txt
config/: audio_pipeline.yaml  data_store.yaml  device_config.yaml  display.yaml  document_library.yaml  jetson_mvp.yaml  jetson_optimizer.yaml.disabled  llm_analysis.yaml  processing_core.yaml  stt_engine.yaml  system_config.yaml
data/: rag_query_terminal.sh  tccc.db-wal
docs/: ARCHITECTURE_REVIEW.md  AUDIO_STT_INTEGRATION_PLAN.md  AUDIO_STT_TESTING_SUMMARY.md  AUDIO_STT_USAGE_GUIDE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EVENT_SCHEMA_IMPLEMENTATION.md  JETSON_OPTIMIZATION_PLAN.md  JETSON_OPTIMIZATION_SUMMARY.md  LLM_ANALYSIS_IMPLEMENTATION.md  MANAGER_INSTRUCTIONS.md  MIGRATION_GUIDE.md  MULTI_FORMAT_RAG_SUPPORT.md  MVP_VERIFICATION.md  RAG_AGENT_COMPLETED_WORK.md  RAG_DATABASE_IMPLEMENTATION.md  RAG_EXPLORER_HELP.md  RAG_IMPLEMENTATION_STATUS.md  RAG_OPTIMIZATION_GUIDE.md  README_MICROPHONE.md  README_PHI2_GGUF.md  SECURITY.md  STT_DEMO_INSTRUCTIONS.md  STT_MODULE_NEXT_STEPS.md  SYSTEM_INTEGRATION_SUMMARY.md  TCCC_DUAL_AGENT_PLAN.md  TCCC_IMAGERY.md  (+11 more)
(+330 files in other folders)
